fixed spacing issue and started trying to show wish

--- a/app/assets/stylesheets/type.css.scss
+++ b/app/assets/stylesheets/type.css.scss
@@ -38,6 +38,7 @@
 	font-size: 20;
 }
 .gw_text{
+	margin-top: 15px;
 	margin-bottom: 2%;
 	font-weight: bold;
 }
